feat: Кнопка скрола наверх (почини чтение js файлов)

--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -1,38 +1,51 @@
 body {
-  background-image: url("../images/bg-image.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-  height: 100%;
+    background-image: url("../images/bg-image.jpg");
+    #background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+    height: 100%;
 }
 
 .dropdown-toggle::after {
-  content: none;
+    content: none;
 }
 
 .custom-shadow {
-  box-shadow: 5px 5px 25px 19px #ed6800;
+    box-shadow: 5px 5px 25px 19px #ed6800;
 }
 
 .product_id {
-  color: #000000;
-  font-size: 15px;
+    color: #000000;
+    font-size: 15px;
 }
 
 .badge.bg-warning.text-dark {
-  position: absolute;
-  top: 10px;
-  right: 5px;
-  z-index: 1;
-  padding: 5px 10px;
-  border-radius: 3px;
-  font-size: 1rem;
-  box-shadow: 2px 2px 15px 9px #aa5412;
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    z-index: 1;
+    padding: 5px 10px;
+    border-radius: 3px;
+    font-size: 1rem;
+    box-shadow: 2px 2px 15px 9px #aa5412;
 }
 
 .badge-banner {
-  top: 80%;
-  border-radius: 15px;
-  font-size: 0.7rem;
+    top: 80%;
+    border-radius: 15px;
+    font-size: 0.7rem;
+}
+
+.scrollTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    padding: 10px;
+    background-color: #ed6800;
+    color: #000000;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
