--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,9 @@
                                 function doSomethingCool() {
                                     const body = document.querySelector('body');
                                     //body.style.backgroundImage = "url('/static/deps/images/bg-image1.jpg')";
-                                    body.style.backgroundImage = "url(" {% static "/deps/images/bg-image1.jpg" %} ")";
+                                    body.style.backgroundImage = "url("
+                                    {% static "/deps/images/bg-image1.jpg" %}
+                                    ")";
                                 }
                             </script>
                             <li><a class="nav-link dropdown-toggle text-white" href="#"
@@ -151,16 +153,15 @@
 
             </div>
         </div>
+
     </nav>
 </header>
 
 <section>
+
     <!-- Контент -->
     <div class="container">
         <div class="row mt-1">
-            <div class="col-lg-2">
-                <!-- Пустой блок на Ваше усмотрение -->
-            </div>
             <div class="col-lg-10">
                 <!-- Контент на странице -->
                 {% include "includes/notifications.html" %}
@@ -172,15 +173,44 @@
 
 {% block footer %}
     <footer class="py-4 bg-dark">
+        <div class="go-top">
+
+            <button class="scrollTopBtn" id="scrollTopBtn">Наверх</button>
+
+            <script>
+                // Показать/скрыть кнопку в зависимости от прокрутки страницы
+                window.onscroll = function () {
+                    var scrollTopBtn = document.getElementById("scrollTopBtn");
+                    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                        scrollTopBtn.style.display = "block";
+                    } else {
+                        scrollTopBtn.style.display = "none";
+                    }
+                };
+
+                // Функция для плавного скроллинга наверх
+                function goTop() {
+                    window.scrollTo({
+                        top: 0,
+                        behavior: 'smooth'
+                    });
+                }
+
+                // Добавить обработчик события на кнопку
+                document.getElementById("scrollTopBtn").addEventListener("click", goTop);
+            </script>
+        </div>
         <div class="container">
             <p class="m-0 text-center text-white">ООО &copy; Вкусно покушать 2004</p>
         </div>
+
     </footer>
 {% endblock %}
 
 <script src="{% static "deps/js/jquery/jquery-3.7.0.min.js" %}"></script>
 <script src="{% static "deps/js/jquery-ajax.js" %}"></script>
 <script src="{% static "deps/js/fone.js" %}"></script>
+<script src="{% static "deps/js/but_scroll" %}"></script>
 <script src="{% static "deps/js/bootstrap/bootstrap.bundle.min.js" %}"></script>
 </body>
 
